fixed image alignment

--- a/components/App/Benefits/benefits.module.scss
+++ b/components/App/Benefits/benefits.module.scss
@@ -75,6 +75,7 @@
 
 .img-wrapper img {
   max-width: 3.5rem;
+  height: 3.5rem;
   // margin: 0 auto;
 }
 
